--- a/bookdetail.html
+++ b/bookdetail.html
@@ -553,7 +553,8 @@
 -->
 <script src="js/main.js"></script>
 <script src="dev-js/bookdetail.js"></script>
-
+<script src="./dev-js/index.js"></script>
+<script src="./dev-js/navsearch.js"></script>
 
 </body>
 </html>
