--- a/search.html
+++ b/search.html
@@ -995,6 +995,8 @@
 -->
 <script src="js/main.js"></script>
 <script src="./dev-js/search.js"></script>
+<script src="./dev-js/index.js"></script>
+
 
 </body>
 </html>
