--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <nav class="side-menu">
             <ul class="main-menu">
 
-
+                <li class="item-menu-mobile current-user text-right p-3"></li>
                 <li class="item-menu-mobile"><a href="index.html">Home</a></li>
                 <li class="item-menu-mobile"><a href="search.html">Search</a></li>
                 <li class="item-menu-mobile">
@@ -356,7 +356,7 @@
 
                     <div class="block1-wrapbtn w-size2">
                         <!-- Button -->
-                        <a href="#" class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
+                        <a href='/search?tag=Manga' class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
                             Manga
                         </a>
                     </div>
@@ -368,7 +368,7 @@
 
                     <div class="block1-wrapbtn w-size2">
                         <!-- Button -->
-                        <a href="#" class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
+                        <a href='/search?tag=tiểu thuyết' class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
                             Tiểu Thuyết
                         </a>
                     </div>
@@ -382,7 +382,7 @@
 
                     <div class="block1-wrapbtn w-size2">
                         <!-- Button -->
-                        <a href="#" class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
+                        <a href='/search?tag=văn học trong nước' class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
                             Văn Học
                         </a>
                     </div>
@@ -394,7 +394,7 @@
 
                     <div class="block1-wrapbtn w-size2">
                         <!-- Button -->
-                        <a href="#" class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
+                        <a href='/search?tag=thiếu nhi' class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
                             Thiếu Nhi
                         </a>
                     </div>
@@ -408,7 +408,7 @@
 
                     <div class="block1-wrapbtn w-size2">
                         <!-- Button -->
-                        <a href="#" class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
+                        <a href='/search?tag=văn học nước ngoài' class="flex-c-m size2 m-text2 bg3 hov1 trans-0-4">
                             Ngoại Văn
                         </a>
                     </div>
@@ -430,7 +430,7 @@
                         <div class="w-size2 p-t-25">
                             <!-- Button -->
                             <a
-                                    href="#"
+                                    href='/search?tag=Tình cảm'
                                     class="flex-c-m size2 bg4 bo-rad-23 hov1 m-text3 trans-0-4"
                             >
                                 Xem thêm
@@ -443,7 +443,7 @@
     </div>
 </section>
 
-<!-- New Product -->
+<!-- Recommend -->
 <section class="newproduct bgwhite p-t-45 p-b-105">
     <div class="container">
         <div class="sec-title p-b-60">
@@ -890,9 +890,11 @@
   ===============================================================================================
 -->
 <script src="js/main.js"></script>
+<script src="./dev-js/recommendloader.js"></script>
+
 <script src="./dev-js/index.js"></script>
 <script src="./dev-js/navsearch.js"></script>
-<script src="./dev-js/recommendloader.js"></script>
+<script src="./dev-js/session-test.js"></script>
 
 <!--<script src="dev-js/index-session.js"></script>-->
 
