hoàn thiện login

--- a/index.html
+++ b/index.html
@@ -894,7 +894,7 @@
 
 <script src="./dev-js/index.js"></script>
 <script src="./dev-js/navsearch.js"></script>
-<script src="./dev-js/session-test.js"></script>
+<!--<script src="./dev-js/session-test.js"></script>-->
 
 <!--<script src="dev-js/index-session.js"></script>-->
 
